--- a/content/downloads.html
+++ b/content/downloads.html
@@ -61,7 +61,7 @@
     <div class="row content">
       <div class="twelvecol">
         <div id="content">
-          <p>The latest stable release of Apache Traffic Server is v9.1.4, released on 2022-12-15.
+          <p>The latest stable release of Apache Traffic Server is v9.2.0, released on 2023-01-23.
 In addition, we continue to support the v8.1.x LTS release train, currently v8.1.6,
 which was released on 2022-12-15. We follow the <a href="http://semver.org">Semantic Versioning</a>
 scheme. The goal is to release patch releases frequently, and minor releases as needed.
@@ -72,18 +72,19 @@ the PGP signatures the <a href="https://www.apache.org/dist/trafficserver/KEYS">
 will be needed.  You can also
 <a href="https://archive.apache.org/dist/trafficserver/">browse through all releases</a>
 and hash signatures.</p>
-<h1 id='current-v9x-release-914-914'>Current v9.x Release -- 9.1.4 <a href='#current-v9x-release-914-914' title='Permanent link to this' class='headerlink'>&para;</a></h1>
-<p>Apache Traffic Server v9.1.4 was released on December 15th, 2022.
- [<a href="https://www.apache.org/dist/trafficserver/trafficserver-9.1.4.tar.bz2.asc"><code>PGP</code></a>]
- [<a href="https://www.apache.org/dist/trafficserver/trafficserver-9.1.4.tar.bz2.sha512"><code>SHA512</code></a>]</p>
-<p><a href="https://www.apache.org/dyn/closer.cgi/trafficserver/trafficserver-9.1.4.tar.bz2"
- class="download_ts">Traffic Server 9.1.4</a></p>
-<p>v9.1.4 is our latest stable release. Additional details for this release are in the
-<a href="https://raw.githubusercontent.com/apache/trafficserver/9.1.x/CHANGELOG-9.1.4">CHANGELOG</a>
-and the the related <a href="https://github.com/apache/trafficserver/pulls?q=is:closed+is:pr+milestone:9.1.4">Github Issues and PRs</a>.</p>
+<h1 id='current-v9x-release-920-920'>Current v9.x Release -- 9.2.0 <a href='#current-v9x-release-920-920' title='Permanent link to this' class='headerlink'>&para;</a></h1>
+<p>Apache Traffic Server v9.2.0 was released on January 23rd, 2023.
+ [<a href="https://www.apache.org/dist/trafficserver/trafficserver-9.2.0.tar.bz2.asc"><code>PGP</code></a>]
+ [<a href="https://www.apache.org/dist/trafficserver/trafficserver-9.2.0.tar.bz2.sha512"><code>SHA512</code></a>]</p>
+<p><a href="https://www.apache.org/dyn/closer.cgi/trafficserver/trafficserver-9.2.0.tar.bz2"
+ class="download_ts">Traffic Server 9.2.0</a></p>
+<p>v9.2.0 is our latest stable release. Additional details for this release are in the
+<a href="https://raw.githubusercontent.com/apache/trafficserver/9.2.x/CHANGELOG-9.2.0">CHANGELOG</a>
+and the the related <a href="https://github.com/apache/trafficserver/pulls?q=is:closed+is:pr+milestone:9.2.0">Github Issues and PRs</a>.</p>
 <p>For details on the v9.x release, please see
-<a href="https://docs.trafficserver.apache.org/en/9.1.x/release-notes/whats-new.en.html">9.1.x News</a>. There are also
-details about <a href="https://docs.trafficserver.apache.org/en/9.1.x/release-notes/upgrading.en.html">upgrading to 9.x</a>.</p>
+<a href="https://docs.trafficserver.apache.org/en/9.2.x/release-notes/whats-new.en.html">9.2.x
+  News</a> (there's a section specific to v9.2.x as well). There are also
+details about <a href="https://docs.trafficserver.apache.org/en/9.2.x/release-notes/upgrading.en.html">upgrading to 9.x</a>.</p>
 <h1 id='current-v8x-release-816-816'>Current v8.x Release -- 8.1.6 <a href='#current-v8x-release-816-816' title='Permanent link to this' class='headerlink'>&para;</a></h1>
 <p>Apache Traffic Server v8.1.6 was released on December 15th, 2022.
  [<a href="https://www.apache.org/dist/trafficserver/trafficserver-8.1.6.tar.bz2.asc"><code>PGP</code></a>]
